--- a/_posts/2022-07-10-stat.md
+++ b/_posts/2022-07-10-stat.md
@@ -16,8 +16,11 @@ tags:
 #### 1. Josephson effect
 
 ​               发生在超导界面处的隧穿效应,首先我们考虑薛定谔方程                                                         
+
 $$
+\begin{align*}
 i\frac{\partial \psi_1}{\partial t}=T\psi_2
+\end{align*}
 $$
 ​               我们令$\psi_1=n_1^{0.5}e^{i\theta_1},\psi_2=n_2^{0.5}e^{i\theta_1}$,我们将其代入到上面方程中                                                      
 $$
@@ -30,22 +33,30 @@ $$
 $$
 ​                 现在我们仔细观察（i），我们做如下变换可以得到                                         
 $$
+\begin{align*}
 \frac{\partial n_1}{\partial t}+in_1\frac{\partial \theta_1}{\partial t}
 =-iT(n_1n_2)^{0.5}e^{i\delta}
+\end{align*}
 $$
 ​                 同理我们对(ii) 也可以得到                                             
 $$
+\begin{align*}
 \frac{\partial n_2}{\partial t}+in_2\frac{\partial \theta_1}{\partial t}
 =-iT(n_1n_2)^{0.5}e^{-i\delta}
+\end{align*}
 $$
 ​                根据实部相等，我们可以知道                                                        
 $$
+\begin{align*}
 \frac{\partial n_1}{\partial t}=-\frac{\partial n_2}{\partial t}
 =T(n_1n_2)^{0.5}\sin\delta\tag{1}
+\end{align*}
 $$
 ​              由于两个超导体相同，因此相位差稳定，也就是说                                                                  
 $$
+\begin{align*}
 J=J_0\sin{\delta}
+\end{align*}
 $$
 ​              下面我们考虑交流Josephson效应，加上电压$eV$,那么我们看到运动方程变为                                                   
 $$
@@ -89,21 +100,29 @@ $$
 
 ​             现在我们来说明超导磁通量子化，即磁通量子只能够取$\frac{h}{q}$得整数倍，根据实验$q=-2e$,先来证明满足于伦敦方程                                              
 $$
+\begin{align*}
 \hat{j}=q\langle\psi \mid \hat{v}\mid \psi\rangle=\frac{q}{m}
 \langle \psi \mid \hat{p}-\frac{q}{c}\vec{A}\mid \psi\rangle
 =\frac{nq}{m}(\hbar\nabla\theta(r)-\frac{q}{c}\vec{A})
+\end{align*}
 $$
 ​             两边取旋度满足于伦敦方程                                                        
 $$
+\begin{align*}
 \nabla\times\vec{j}=-\frac{nq^2}{mc}\vec{B}
+\end{align*}
 $$
 ​             根据迈斯纳效应，超导内得磁场，那么我们断定                                                              
 $$
+\begin{align*}
 \hbar\nabla\theta(r)=\frac{q}{c}\vec{A}
+\end{align*}
 $$
 ​           两边进行线积分，我们可以得到                                                 
 $$
+\begin{align*}
 \hbar\oint\nabla\theta(r)\cdot dl=\frac{q}{c}\oint\vec{A}\cdot dl=\frac{q}{c}\oiint\vec{B}\cdot d\vec{s}=\frac{q}{c}\Phi
+\end{align*}
 $$
 ​           因此我们知道$\Phi=n\frac{hc}{q}$
 
