--- a/_posts/2022-07-11-3rdhomo.md
+++ b/_posts/2022-07-11-3rdhomo.md
@@ -1,16 +1,16 @@
 ---
 layout:     post
-title:       Isomorphism Theorem
+title:      Isomorphism Theorem
 subtitle:   The Third Isomorphism Theorem
 date:       2022-07-11
-author:     BY
+author:     Maggie
 header-img: img/post-bg-cook.jpg
 catalog: true
 tags:
     - Group theory
 ---
 
-# 代數導論 (14) - The Third Isomorphism Theorem
+ The Third Isomorphism Theorem
 
 
 
