--- a/_posts/2024-04-08-pi flux.md
+++ b/_posts/2024-04-08-pi flux.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      Condense matter theory
-subtitle:   Condense matter theory note
+title:      Tight binding model on square lattice with stagger flux
+subtitle:   
 date:       2024-04-08
 author:     Maggie
 header-img: img/Andersonphoto.jpg
