--- a/_posts/2024-04-08-pi flux.md
+++ b/_posts/2024-04-08-pi flux.md
@@ -56,13 +56,13 @@ $$
 \varepsilon(k)=\pm 
 \sqrt{ \cos^2k_x +\cos^2(k_y+\frac{\phi}{2})  +2\cos\frac{\phi}{2}
 	\cos k_x \cos(k_y+\frac{\phi}{2})
- } \tag{3}
+ }  \label{3}
 \end{align}
 $$
 
 
 
-We can find the Dirac points of dispersion (\tag{3}) easily , nmaly 
+We can find the Dirac points of dispersion (\ref{3}) easily, namly 
 
 $$
 \begin{align}
@@ -78,7 +78,7 @@ We will give the linear dispersion  on symmetric gauge cases.
 ## Symmetric gauge
 
 
-<img src="https://maggiexheuw.github.io/jpg/flux1.jpg" alt="Dinosaur" />
+<img src="https://maggiexheuw.github.io/jpg/flux.jpg" alt="Dinosaur" />
 
 
 
