--- a/_posts/2024-04-08-pi flux.md
+++ b/_posts/2024-04-08-pi flux.md
@@ -16,10 +16,13 @@ tags:
 
 
 ## Landau guage
-
+<figure>
 <img src="https://maggiexheuw.github.io/jpg/flux1.jpg" alt="Dinosaur" />
-
-We adopt tranverse gauge  to study this problem . The unit cell could be selected as Fig(\ref{fig1}) . Every cell has  two freedom $A,B$ .  The Bloch hamiltonian on the momentum space could be written as 
+  <figcaption>Stagger flux on square lattice. Every neighbor plaquette with opposite flux.  The gauge of every plaquette are fixed on red bond. 
+   (\#fig:1)
+  </figcaption>
+</figure>
+We adopt tranverse gauge  to study this problem . The unit cell could be selected as Fig(\@ref(fig:1)) . Every cell has  two freedom $A,B$ .  The Bloch hamiltonian on the momentum space could be written as 
 
 $$
 \begin{align}
@@ -56,13 +59,13 @@ $$
 \varepsilon(k)=\pm 
 \sqrt{ \cos^2k_x +\cos^2(k_y+\frac{\phi}{2})  +2\cos\frac{\phi}{2}
 	\cos k_x \cos(k_y+\frac{\phi}{2})
- }  \label{3}
+ }   (\#eq:3)
 \end{align}
 $$
 
 
 
-We can find the Dirac points of dispersion (\ref{3}) easily, namly 
+We can find the Dirac points of dispersion (\@ref(eq:3)) easily, namly 
 
 $$
 \begin{align}
@@ -78,11 +81,17 @@ We will give the linear dispersion  on symmetric gauge cases.
 ## Symmetric gauge
 
 
+<figure>
 <img src="https://maggiexheuw.github.io/jpg/flux.jpg" alt="Dinosaur" />
+  <figcaption>Stagger flux on square lattice. Every neighbor plaquette with opposite flux.  The black bond
+		admits $\frac{\phi}{4}$ and red bonds admits $-\frac{\phi}{4}$.  
+   (\#fig:2)
+  </figcaption>
+</figure>
 
 
 
-We consider tight binding model on square lattice with stagger flux $\phi$. As shown on Fig(\ref{fig2}), the unit cell are selected as the plaquette with positive flux $\phi$. Every unit cell has two  freedom $A,B$, the Bloch hamiltonian could be described with four component spinor $\displaystyle \mathbf{\psi}(k)=
+We consider tight binding model on square lattice with stagger flux $\phi$. As shown on Fig(\@ref(fig:2)), the unit cell are selected as the plaquette with positive flux $\phi$. Every unit cell has two  freedom $A,B$, the Bloch hamiltonian could be described with four component spinor $\displaystyle \mathbf{\psi}(k)=
 (\psi_{A}(k)\quad \psi_{B}(k) )^{\mathbf{T}}$ . The Bloch hamiltonian 
 reads as 
 
@@ -123,14 +132,14 @@ Hence, the enenrgy spectrum is just $\varepsilon(k)=\pm \mid f(k)\mid$
 $$
 \begin{align}
 \varepsilon(k)=\pm 2\sqrt{\cos^2 k_x+\cos^2k_y+2\cos \frac{\phi}{2} \cos k_x\cos k_y}
-\label{14}
+(\#eq:14)
 \end{align}
 $$
 
 
 
 
-The dispersion relation (\ref{14}) shows the zero point at $(\pm \frac{\pi}{2},\pm \frac{\pi}{2}),
+The dispersion relation (\@ref(eq:14)) shows the zero point at $(\pm \frac{\pi}{2},\pm \frac{\pi}{2}),
 (\mp \frac{\pi}{2},\pm \frac{\pi}{2})$ . We expand the linear dispersion relation at this points.
 
 $$
