--- a/_posts/2024-04-08-pi flux.md
+++ b/_posts/2024-04-08-pi flux.md
@@ -162,6 +162,6 @@ The low enenrgy physics could be described by
 
 $$
 \begin{align}
-H(k)=2t \vec{\text{K}} \cdot \vec{\sigma}   =\vec{k} -(\frac{\pi}{2},\frac{\pi}{2})
+H(k)=2t \vec{\text{K}} \cdot \vec{\sigma}   \qquad  \vec{K}=\vec{k} -(\frac{\pi}{2},\frac{\pi}{2})
 \end{align}
 $$
