--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -11,9 +11,7 @@ tags:
 ---
 
 
-
-
-## Condense matter books recommended 
+## Condense matter textbooks recommended 
 
 <li><a href="https://www.cambridge.org/core/books/field-theories-of-condensed-matter-physics/EABECB65A0F4F9289B2737A6DD3E6C0D"> 
 Condensed matter theory -- Fradkin
@@ -22,11 +20,6 @@ Condensed matter theory -- Fradkin
 
 <li><a href="https://www.cambridge.org/core/books/dwave-superconductivity/25FAA6DC672ACB1D79A008BCD78F8C63"> 
 d wave superconductor -- Tao Xiang, Congjun WU 
-</a></li>
-
-
-<li><a href="https://https://www.cambridge.org/core/books/quantum-phase-transitions/33C1C81500346005E54C1DE4223E5562"> 
-Quantum Phase Transitions -- Subir Sachdev
 </a></li>
 
 
@@ -44,4 +37,31 @@ Theory of superconductivity--Schrieffer
 <li>
 <a href="https://www.cambridge.org/core/books/introduction-to-manybody-physics/B7598FC1FCEE0285F5EC767E835854C8">
 Introduction to Many-Body Physics--Piers Coleman
+</a></li>
+
+
+
+## Field theory textbooks recommended 
+
+<li>
+<a href="https://www.taylorfrancis.com/books/mono/10.1201/9780429503559/introduction-quantum-field-theory-michael-peskin">
+An Introduction To Quantum Field Theory--Peskin
+</a></li>
+
+
+<li>
+<a href="https://www.taylorfrancis.com/books/mono/10.1201/9780429503559/introduction-quantum-field-theory-michael-peskin">
+Quantum Field Theory and the Standard Model--Matthew D. Schwartz
+</a></li>
+
+
+<li>
+<a href="https://www.cambridge.org/core/books/quantum-theory-of-fields/22986119910BF6A2EFE42684801A3BDF">
+The Quantum Theory of Fields--Weinberg
+</a></li>
+
+
+<li>
+<a href="https://www.worldscientific.com/worldscibooks/10.1142/0131#t=aboutBook">
+Current Algebra and Anomalies--Roman Jackiw
 </a></li>
