--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -23,7 +23,7 @@ d wave superconductor -- Tao Xiang, Congjun WU
 </a></li>
 
 
-<li><a href="https://https://www.cambridge.org/core/books/quantum-phase-transitions/33C1C81500346005E54C1DE4223E5562"> 
+<li><a href="https://www.cambridge.org/core/books/quantum-phase-transitions/33C1C81500346005E54C1DE4223E5562"> 
 Quantum Phase Transitions -- Subir Sachdev
 </a></li>
 
