--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -40,6 +40,11 @@ Introduction to Many-Body Physics--Piers Coleman
 </a></li>
 
 
+<li><a href="https://maggiexheuw.github.io/pdfauerbach.pdf">
+Interacting electrons and quantum magnetisms -- Auerbach
+</a></li>
+
+
 
 ## Field theory textbooks recommended 
 
