--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -40,7 +40,7 @@ Introduction to Many-Body Physics--Piers Coleman
 </a></li>
 
 
-<li><a href="https://maggiexheuw.github.io/pdfauerbach.pdf">
+<li><a href="https://maggiexheuw.github.io/auerbach.pdf">
 Interacting electrons and quantum magnetisms -- Auerbach
 </a></li>
 
