--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -18,11 +18,17 @@ Condensed matter theory -- Fradkin
 </a></li>
 
 
-<li><a href="https://www.cambridge.org/core/books/dwave-superconductivity/25FAA6DC672ACB1D79A008BCD78F8C63"> 
+<li><a href="https://maggiexheuw.github.io/pdf/tao.pdf">
 d wave superconductor -- Tao Xiang, Congjun WU 
 </a></li>
 
+<li><a href="https://maggiexheuw.github.io/pdf/tao2.pdf">
+d 波超导体--向涛
+</a></li>
 
+
+
+Quantum Field Theory and the Standard Model (Schwartz M.D.) (Z-Library)
 <li><a href="https://www.cambridge.org/core/books/quantum-phase-transitions/33C1C81500346005E54C1DE4223E5562"> 
 Quantum Phase Transitions -- Subir Sachdev
 </a></li>
