--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -75,3 +75,10 @@ The Quantum Theory of Fields--Weinberg
 <a href="https://www.worldscientific.com/worldscibooks/10.1142/0131#t=aboutBook">
 Current Algebra and Anomalies--Roman Jackiw
 </a></li>
+
+
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf/lectureqft.pdf">
+Quantum field theory lecture-Liu Chuan
+</a></li>
