--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -82,3 +82,18 @@ Current Algebra and Anomalies--Roman Jackiw
 <a href="https://maggiexheuw.github.io/pdf/lectureqft.pdf">
 Quantum field theory lecture-Liu Chuan
 </a></li>
+
+
+
+## Group theory textbooks recommended 
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf/(Lecture Notes in Physics) Francesco Iachello - Lie Algebras and Applications-Springer (2010).pdf">
+Lie group Lectures for physicists
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf/Brian G. Wybourne - Classical Groups for Physicists-John Wiley & Sons Inc (1974).djvu">
+Lie group Lectures for physicists
+</a></li>
