--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -95,5 +95,5 @@ Lie group Lectures for physicists
 
 <li>
 <a href="https://maggiexheuw.github.io/pdf/Brian G. Wybourne - Classical Groups for Physicists-John Wiley & Sons Inc (1974).djvu">
-Lie group Lectures for physicists
+Classical groups for physicists--Wybourne
 </a></li>
