--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -97,3 +97,15 @@ Lie group Lectures for physicists
 <a href="https://maggiexheuw.github.io/pdf/Brian G. Wybourne - Classical Groups for Physicists-John Wiley & Sons Inc (1974).djvu">
 Classical groups for physicists--Wybourne
 </a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf/Pero.pdf">
+Gernalized coherent states and their applications--Perelomov (1986)  
+</a></li>
+
+
+
+
+
+
+
