--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -83,6 +83,15 @@ Current Algebra and Anomalies--Roman Jackiw
 Quantum field theory lecture-Liu Chuan
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/pdf/lectureqft.pdf">
+Quantum field theory lecture-Liu Chuan
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf/TopologicalFieldTheory.pdf">
+Toplogical field theory--Moore
+</a></li>
 
 
 ## Group theory textbooks recommended 
@@ -105,6 +114,15 @@ Gernalized coherent states and their applications--Perelomov (1986)
 
 
 
+
+## Clliford Algebra recommended
+
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf/
+clifford.pdf">
+Clliford algebra 
+</a></li>
 
 
 
