--- a/_posts/2024-05-01-website.md
+++ b/_posts/2024-05-01-website.md
@@ -24,11 +24,21 @@ Lorentz group notes -- David Williams
 Yi Zhuang You
 </a></li>
 
+<li><a href="https://www.physics.rutgers.edu/~gmoore/"> 
+Gregory Moore
+</a></li>
+
+
+
 
 ## Group theory
 
 <li><a href="https://www.math.nagoya-u.ac.jp/~yamagami/"> 
 Projective symetry group--Shigeru
+</a></li>
+
+<li><a href="https://www.physics.rutgers.edu/~gmoore/618Spring2018/"> 
+Abstract group--Gregory Moore
 </a></li>
 
 
@@ -41,6 +51,13 @@ Condense matter theory
 
 
 
-<li><a href="http://www.pmaweb.caltech.edu/~mcc/Ph127/c/index.html"> 
+
+
+
+## Field theory 
+
+
+
+<li><a href="http://hitoshi.berkeley.edu/230A/"> 
 Statistical Physics --Michael Gross
 </a></li>
