--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -93,6 +93,12 @@ Quantum field theory lecture-Liu Chuan
 Toplogical field theory--Moore
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/pdf/FPI.pdf">
+Fermionic integral functionals
+</a></li>
+
+
 
 ## Group theory textbooks recommended 
 
