--- a/_posts/2024-05-01-website.md
+++ b/_posts/2024-05-01-website.md
@@ -28,7 +28,9 @@ Yi Zhuang You
 Gregory Moore
 </a></li>
 
-
+<li><a href="https://gandhiviswanathan.wordpress.com/2018/10/16/berezin-integration-of-grassmann-variables/"> 
+Gregory Moore
+</a></li>
 
 
 ## Group theory
@@ -49,7 +51,9 @@ Abstract group--Gregory Moore
 Condense matter theory
 </a></li>
 
-
+<li><a href="https://gandhiviswanathan.wordpress.com/2018/10/16/berezin-integration-of-grassmann-variables/"> 
+Condense matter theory
+</a></li>
 
 
 
