--- a/_posts/2024-05-01-website.md
+++ b/_posts/2024-05-01-website.md
@@ -52,7 +52,7 @@ Condense matter theory
 </a></li>
 
 <li><a href="https://gandhiviswanathan.wordpress.com/2018/10/16/berezin-integration-of-grassmann-variables/"> 
-Condense matter theory
+Gandhi Viswanathan's Blog
 </a></li>
 
 
