--- a/_posts/2024-05-08-Hand.md
+++ b/_posts/2024-05-08-Hand.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Some useful links  
+title:      Hand drafting note 
 subtitle:   
 date:       2024-05-08
 author:     Maggie
