--- a/_posts/2024-05-08-Hand.md
+++ b/_posts/2024-05-08-Hand.md
@@ -40,5 +40,5 @@ Unconventioal superconductivity (I)
 
 <li>
 <a href="https://maggiexheuw.github.io/pdf/clifford.pdf.pdf">
-Clifford Algebra I
+Clifford Algebra (I)
 </a></li>
