--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -45,8 +45,8 @@ Introduction to Many-Body Physics--Piers Coleman
 </a></li>
 
 
-<li><a href="https://maggiexheuw.github.io/pdf/auerbach.pdf">
-Interacting electrons and quantum magnetisms -- Auerbach
+<li><a href="https://maggiexheuw.github.io/pdf/QHE note arovas.pdf">
+Quantum hall effect--Arovas
 </a></li>
 
 
