--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -118,7 +118,10 @@ Classical groups for physicists--Wybourne
 Gernalized coherent states and their applications--Perelomov (1986)  
 </a></li>
 
-
+<li>
+<a href="https://maggiexheuw.github.io/pdf/Gilmore.djvu">
+Lie algebra and Lie group (BCH formula) --Gilmore(1974)
+</a></li>
 
 
 ## Clliford Algebra recommended
