--- a/_posts/2024-05-01-website.md
+++ b/_posts/2024-05-01-website.md
@@ -36,6 +36,11 @@ Gregory Moore
 电磁学--刘俊明
 </a></li>
 
+<li><a href="https://wucj.lab.westlake.edu.cn/"> 
+Congjun WU
+</a></li>
+
+
 
 ## Group theory
 
