--- a/_posts/2024-05-01-website.md
+++ b/_posts/2024-05-01-website.md
@@ -29,7 +29,7 @@ Gregory Moore
 </a></li>
 
 <li><a href="https://gandhiviswanathan.wordpress.com/2018/10/16/berezin-integration-of-grassmann-variables/"> 
-Gandhi Viswanathan's Blog
+Gandhi Viswanathan (Grassmann integral )
 </a></li>
 
 <li><a href="https://pld.nju.edu.cn/"> 
