--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -121,6 +121,15 @@ Lie algebra and Lie group (BCH formula) --Gilmore(1974)
 </a></li>
 
 
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf/Gilmore.djvu">
+<p style="color:red;">Symmetry, Representations,
+and Invariants ,  -- Goodman </p>
+</a></li>
+
+
+
 ## Clliford Algebra recommended
 
 
