--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -123,10 +123,11 @@ Lie algebra and Lie group (BCH formula) --Gilmore(1974)
 
 
 <li>
-<a href="https://maggiexheuw.github.io/pdf/Gilmore.djvu">
-<p style="color:red;">Symmetry, Representations,
+<a href="https://maggiexheuw.github.io/pdf/symmetry.pdf">
+<p style="color:blue;">Symmetry, Representations,
 and Invariants ,  -- Goodman </p>
-</a></li>
+</a>
+</li>
 
 
 
