--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -125,7 +125,7 @@ Lie algebra and Lie group (BCH formula) --Gilmore(1974)
 <li>
 <a href="https://maggiexheuw.github.io/pdf/symmetry.pdf">
 <p style="color:blue;">Symmetry, Representations,
-and Invariants ,  -- Goodman </p>
+and Invariants , for mathematical techniques -- Goodman </p>
 </a>
 </li>
 
