--- a/_posts/2024-05-01-website.md
+++ b/_posts/2024-05-01-website.md
@@ -79,7 +79,9 @@ Gandhi Viswanathan's Blog
 Statistical Physics --Michael Gross
 </a></li>
 
-
+<li><a href="https://professores.ift.unesp.br/ricardo.matheus/files/courses/2020tqc1/"> 
+Fierz idenity
+</a></li>
 
 ## Tools
 
