--- a/_posts/2024-05-01-website.md
+++ b/_posts/2024-05-01-website.md
@@ -94,6 +94,6 @@ Zlibrary
 
 ## Mathematical physics
 
-<li><a href="http://www.th.physik.uni-bonn.de/klemm/teaching.php"> 
+<a href="http://www.th.physik.uni-bonn.de/klemm/teaching.php"> 
 <span style="color: blue;">  Bonn university--String theort and mathematical physics
-</a></li>
+</a>
