--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -95,6 +95,11 @@ Toplogical field theory--Moore
 Fermionic integral functionals
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/pdf/path.pdf">
+量子力学与路径积分--侯伯元
+</a></li>
+
 
 
 ## Group theory textbooks recommended 
