--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -61,7 +61,7 @@ Quantum hall effect--Arovas
 
 ### Bose Einstein condensation
 
-<li><a href="https://maggiexheuw.github.io/pdf/Fundamentals.pdf">
+<li><a href="https://maggiexheuw.github.io/pdf/FundamentalsBEC.pdf">
 Bose Einstein condensation--Ueda(2010)
 </a></li>
 
