--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -126,6 +126,13 @@ Fermionic integral functionals
 </a></li>
 
 
+<li>
+<a href="https://maggiexheuw.github.io/pdf/Gauge Theory.pdf">
+Gauge theory--David Tong
+</a></li>
+
+
+
 
 ## Group theory textbooks recommended 
 
