--- a/_posts/2024-05-20-study.md
+++ b/_posts/2024-05-20-study.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Classical literature
+title:       Research interest 
 subtitle:   
 date:       2024-05-20
 author:     Maggie
