--- a/_posts/2024-05-20-study.md
+++ b/_posts/2024-05-20-study.md
@@ -71,3 +71,10 @@ Effect--Haldane
 <a href="https://maggiexheuw.github.io/pdf2/christos-et-al-2023-a-model-of-d-wave-superconductivity-antiferromagnetism-and-charge-order-on-the-square-lattice.pdf">
 A model of d-wave superconductivity, antiferromagnetism, and charge order on the square lattice--Subir Sachdev
 </a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/2307.05307v3.pdf">
+Phases of (2+1)D $SO(5)$ non-linear sigma model with a topological term on a sphere:
+multicritical point and disorder phase
+</a></li>
