--- a/_posts/2024-05-01-website.md
+++ b/_posts/2024-05-01-website.md
@@ -95,6 +95,9 @@ Fierz idenity
 Zlibrary
 </a></li>
 
+<li><a href="https://pypi.org/project/bilili/"> 
+Bilili-- A tool to download vedio from Bilibili
+</a></li>
 
 ## Mathematical physics
 
