--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -109,12 +109,6 @@ Quantum field theory lecture-Liu Chuan
 </a></li>
 
 
-
-<li>
-<a href="https://maggiexheuw.github.io/pdf/TopologicalFieldTheory.pdf">
-Toplogical field theory--Moore
-</a></li>
-
 <li>
 <a href="https://maggiexheuw.github.io/pdf/FPI.pdf">
 Fermionic integral functionals
@@ -125,13 +119,27 @@ Fermionic integral functionals
 量子力学与路径积分--侯伯元
 </a></li>
 
+### Topological field theory
+<li>
+<a href="https://maggiexheuw.github.io/pdf/TopologicalFieldTheory.pdf">
+Toplogical field theory--Moore
+</a></li>
+
+### Gauge field theory 
 
 <li>
 <a href="https://maggiexheuw.github.io/pdf/Gauge Theory.pdf">
 Gauge theory--David Tong
 </a></li>
 
-
+### Conformal field theory
+<li>
+<a href="https://maggiexheuw.github.io/pdf/cft2017.pdf">
+EPFL Lectures on
+Conformal Field
+Theory in D≥3
+Dimensions
+</a></li>
 
 
 ## Group theory textbooks recommended 
