--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -134,7 +134,7 @@ Gauge theory--David Tong
 
 ### Conformal field theory
 <li>
-<a href="https://maggiexheuw.github.io/pdf/cft2017.pdf">
+<a href="https://maggiexheuw.github.io/pdf2/cft2017.pdf">
 EPFL Lectures on
 Conformal Field
 Theory in D≥3
