--- a/_posts/2024-05-20-study.md
+++ b/_posts/2024-05-20-study.md
@@ -78,3 +78,10 @@ A model of d-wave superconductivity, antiferromagnetism, and charge order on the
 Phases of (2+1)D $SO(5)$ non-linear sigma model with a topological term on a sphere:
 multicritical point and disorder phase
 </a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/wang2021.pdf">
+Phases of the (2 + 1) Dimensional $SO(5)$ Nonlinear Sigma Model with Topological Term
+<a href="https://maggiexheuw.github.io/pdf2/Landau_Level_sup.pdf">
+Supplementary materials
+</a></li>
