--- a/_posts/2024-05-20-study.md
+++ b/_posts/2024-05-20-study.md
@@ -85,5 +85,7 @@ Phases of the (2 + 1) Dimensional $SO(5)$ Nonlinear Sigma Model with Topological
 Supplementary materials
 </a></li>
 
-
+<li>
 <a href="https://maggiexheuw.github.io/pdf2/Landau_Level_sup.pdf">
+Supplementary materials
+</a></li>
