--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:       Research interest 
+title:      Lecture
 subtitle:   
 date:       2024-05-20
 author:     Maggie
