--- a/_posts/2024-05-08-Hand.md
+++ b/_posts/2024-05-08-Hand.md
@@ -25,10 +25,20 @@ tags:
 ##  Condense matter theory 
 
 ###  superconductivity
+<li>
+<a href="https://maggiexheuw.github.io/pdf/electron.pdf">
+Electron phonon interaction
+</a></li>
+
 
 <li>
 <a href="https://maggiexheuw.github.io/pdf/unconventional.pdf">
 Unconventioal superconductivity (I)
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf/p wave.pdf">
+p wave superconductor (2)
 </a></li>
 
 
