--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -22,5 +22,5 @@ Topological Terms of Nonlinear Sigma models--Cen Ke Xu
 
 <li>
 <a href="https://maggiexheuw.github.io/PPTX/Frustratedsuperfluidity_ShanghaiTech.pptx">
-Topological Terms of Nonlinear Sigma models--Cong Jun Wu
+Frustrated superfluidity--Cong Jun Wu
 </a></li>
