--- a/_posts/2024-05-08-Hand.md
+++ b/_posts/2024-05-08-Hand.md
@@ -26,7 +26,7 @@ tags:
 
 ###  superconductivity
 <li>
-<a href="https://maggiexheuw.github.io/pdf/electron.pdf">
+<a href="https://maggiexheuw.github.io/pdf2/electron.pdf">
 Electron phonon interaction
 </a></li>
 
@@ -37,7 +37,7 @@ Unconventioal superconductivity (I)
 </a></li>
 
 <li>
-<a href="https://maggiexheuw.github.io/pdf/p wave.pdf">
+<a href="https://maggiexheuw.github.io/pdf2/p wave.pdf">
 p wave superconductor (2)
 </a></li>
 
