--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -179,7 +179,7 @@ and Invariants , for mathematical techniques -- Goodman </p>
 
 
 
-## Clliford Algebra recommended
+### Clliford Algebra recommended
 
 
 <li>
@@ -191,3 +191,10 @@ Clliford algebra
 
 
 
+### Mathematical physics
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/
+Topology for Physicists (Albert S. Schwarz (auth.)) (Z-Library).pdf">
+Topology for physicists--Schwartz
+</a></li>
