--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -24,3 +24,10 @@ Topological Terms of Nonlinear Sigma models--Cen Ke Xu
 <a href="https://maggiexheuw.github.io/PPTX/Frustratedsuperfluidity_ShanghaiTech.pptx">
 Frustrated superfluidity--Cong Jun Wu
 </a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/Delgado.pdf">
+The KZ Anomaly in Topological Insulators
+</a></li>
+
+
