--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -17,7 +17,7 @@ tags:
 Condensed matter theory -- Fradkin
 </a></li>
 
-<li><a href="https://maggiexheuw.github.io/pdf/The universe in a helium droplet (Grigory E. Volovik) (Z-Library).pdf">
+<li><a href="https://maggiexheuw.github.io/pdf2/The universe in a helium droplet (Grigory E. Volovik) (Z-Library).pdf">
 The universe in a helium droplet -- Volovik
 </a></li>
 
