--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -55,6 +55,10 @@ Introduction to Many-Body Physics--Piers Coleman
 Quantum transport theory--Jorgen Rammer
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/pdf/Interacting Electrons Theory and Computational Approaches (Richard M. Martin, Lucia Reining etc.) (Z-Library).pdf">
+Interacting Electrons Theory and Computational Approaches--Cambradige press
+</a></li>
 
 
 ### Quantum Hall effect
