--- a/_posts/2024-05-20-study.md
+++ b/_posts/2024-05-20-study.md
@@ -115,3 +115,34 @@ Topological interpretation of the Luttinger theorem--Yunoki
 <a href="https://maggiexheuw.github.io/pdf2/PhysRevLett.84.3370.pdf">
 Topological Approach to Luttinger’s Theorem and the Fermi Surface of a Kondo Lattice(2000)
 </a></li>
+
+
+## Hopf Insulator 
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/PhysRevB.107.115159.pdf">
+$Z_2$ spin Hopf insulator: Helical hinge states and returning Thouless pump--Taylor Huges
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/PhysRevLett.123.266803.pdf">
+Floquet Hopf Insulators--J.E Moore
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/PhysRevB.95.161116.pdf">
+Symmetry-protected topological Hopf insulator and its generalizations--Cenke XU
+</a></li>
+
+
+
+
+
+
+
+
+
+
+
