--- a/_posts/2024-05-20-study.md
+++ b/_posts/2024-05-20-study.md
@@ -120,6 +120,16 @@ Topological Approach to Luttinger’s Theorem and the Fermi Surface of a Kondo L
 ## Hopf Insulator 
 
 <li>
+<a href="https://maggiexheuw.github.io/pdf2/Supple_NHHopf_bundle.pdf">
+Supplementary material for $\mathcal{PT}$ -symmetric Non-Hermitian Hopf Metal
+<a href="https://maggiexheuw.github.io/pdf2/PhysRevResearch.6.L012053.pdf">
+$\mathcal{PT}$ symmetric non-Hermitian Hopf metal
+</a></li>
+
+
+
+
+<li>
 <a href="https://maggiexheuw.github.io/pdf2/PhysRevB.107.115159.pdf">
 $Z_2$ spin Hopf insulator: Helical hinge states and returning Thouless pump--Taylor Huges
 </a></li>
