--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -60,6 +60,12 @@ Quantum transport theory--Jorgen Rammer
 Interacting Electrons Theory and Computational Approaches--Cambradige press
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/pdf/Many-particle physics (Gerald D. Mahan) (Z-Library).djvu">
+Many-particle physics (Gerald D. Mahan) (Z-Library).djvu--Mahan
+</a></li>
+
+
 
 ### Quantum Hall effect
 
