--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -193,6 +193,12 @@ and Invariants , for mathematical techniques -- Goodman </p>
 </li>
 
 
+<li>
+<a href="https://maggiexheuw.github.io/pdf/The theory of group characters and matrix representations of groups (Dudley E. Littlewood) (Z-Library).djvu">
+The theory of group characters and matrix representations of groups --Littlewood 
+</a>
+</li>
+
 
 ### Clliford Algebra recommended
 
