--- a/_posts/2024-05-20-study.md
+++ b/_posts/2024-05-20-study.md
@@ -153,7 +153,21 @@ Symmetry-protected topological Hopf insulator and its generalizations--Cenke XU
 
 
 
+## Path integral for Bell inequality 
 
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/Spacetime Path Integrals for Entangled States">
+Spacetime Path Integrals for Entangled States
+</a></li>
+
+
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/PhysRevD.107.105001.pdf">
+Feynman path integral formulation of the Bell-Clauser-Horne-Shimony-
+Holt inequality in quantum field theory
+</a></li>
 
 
 
