--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -30,4 +30,20 @@ Frustrated superfluidity--Cong Jun Wu
 The KZ Anomaly in Topological Insulators
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/papic.pdf">
+Geometry and dynamics in the fractional quantum Hall effect:
+from graviton oscillation to quantum many-body scars--Papic
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/cargese1-haldane.pdf">
+Geometry of "flux attachment" in
+the fractional quantum Hall effect-Haldane
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/Wang Yuzhu_SPMS_Thesis.pdf">
+Graviton modes in fractional quantum hall liquids--Yu zhou Wang 
+</a></li>
 
