--- a/_posts/2024-05-01-website.md
+++ b/_posts/2024-05-01-website.md
@@ -46,8 +46,14 @@ Congjun WU
 Nathan--Goldman
 </a></li>
 
+<li><a href="https://phy.ntnu.edu.tw/~changmc/"> 
+车明昌
+</a></li>
 
 
+<li><a href="http://insti.physics.sunysb.edu/ITP/symmetries-99/program.html"> 
+C.N.Yang 
+</a></li>
 
 
 ## Group theory
