--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -47,3 +47,20 @@ the fractional quantum Hall effect-Haldane
 Graviton modes in fractional quantum hall liquids--Yu zhou Wang 
 </a></li>
 
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/zhang.pdf">
+Symmetry and phases in cold atomic and
+condensed matter systems-Shou cheng Zhang 
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/hasebe-kazuki.pdf">
+Noncommutative geometry on Landau levels -Hesebe 
+</a></li>
+
+
+
+
+
