--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -21,6 +21,10 @@ Condensed matter theory -- Fradkin
 The universe in a helium droplet -- Volovik
 </a></li>
 
+<li><a href="https://maggiexheuw.github.io/pdf2/many_body1.pdf">
+Quantum Condensed Matter Physics - Lecture
+Notes
+</a></li>
 
 ### Superconductivity
 <li><a href="https://maggiexheuw.github.io/pdf/tao.pdf">
@@ -42,6 +46,13 @@ Quantum Phase Transitions -- Subir Sachdev
 <a href="https://maggiexheuw.github.io/pdf/schrieffer.pdf">
 Theory of superconductivity--Schrieffer 
 </a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/topological_insulators.pdf">
+Topological insulator and topological superconductors -- Andrei Bernevig  and Taylor Huges
+</a></li>
+
+
 
 ### Many body theory
 
