--- a/_posts/2024-05-01-website.md
+++ b/_posts/2024-05-01-website.md
@@ -97,6 +97,11 @@ Statistical Physics --Michael Gross
 Fierz idenity
 </a></li>
 
+<li><a href="https://conf.itp.phys.ethz.ch/esi-school/lecture-notes.html"> 
+Conformal field theory
+</a></li>
+
+
 ## Tools
 
 
