--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -66,4 +66,7 @@ Noncommutative geometry on Landau levels -Hesebe
 Berry phase and supersymmetry--David Tong 
 </a></li>
 
-
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/Lecture2 (1).pdf">
+Weiss-Zumino model 
+</a></li>
