--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -56,6 +56,13 @@ condensed matter systems-Shou cheng Zhang
 
 
 <li>
+<a href="https://maggiexheuw.github.io/pdf2/Zhang_Lyon2009_B.pdf">
+General Theory of Topological Insulators-Shou cheng Zhang 
+</a></li>
+
+
+
+<li>
 <a href="https://maggiexheuw.github.io/pdf2/hasebe-kazuki.pdf">
 Noncommutative geometry on Landau levels -Hesebe 
 </a></li>
@@ -70,3 +77,15 @@ Berry phase and supersymmetry--David Tong
 <a href="https://maggiexheuw.github.io/pdf2/Lecture2 (1).pdf">
 Weiss-Zumino model 
 </a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/Hansson_TopoMat11_KITP.pdf">
+Topological Field Theory for p-wave SCs--Hannson
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/moore_2.pdf">
+Electrodynamics in topological insulators--Moore
+</a></li>
+
