--- a/_posts/2024-05-01-website.md
+++ b/_posts/2024-05-01-website.md
@@ -55,6 +55,15 @@ Nathan--Goldman
 C.N.Yang 
 </a></li>
 
+<li><a href="https://www.ias.edu/sns/adler"> 
+Stephen.Adler
+</a></li>"> 
+
+
+<li><a href="https://www.ias.edu/sns/malda"> 
+Juan.Maldcena
+</a></li>"> 
+
 
 ## Group theory
 
@@ -119,5 +128,12 @@ Bilili-- A tool to download vedio from Bilibili
 <li>
 <a href="http://www.th.physik.uni-bonn.de/klemm/teaching.php"> 
 <span style="color: blue;">  Bonn university--String theort and mathematical physics
+</a>
+<li>
+
+
+<li>
+<a href="http://archive.ymsc.tsinghua.edu.cn/"> 
+清华求真书院
 </a>
 <li>
