--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -2,7 +2,7 @@
 layout:     post
 title:      Lecture
 subtitle:   
-date:       2024-06-07
+date:       2024-06-08
 author:     Maggie
 header-img: img/Andersonphoto.jpg
 catalog: true
@@ -48,7 +48,7 @@ in Eight Dimensions and the Last Hopf Map
 
 <li>
 <a href="https://maggiexheuw.github.io/Group/Stephen L. Adler - Quaternionic Quantum Mechanics and Quantum Fields-Oxford University Press, USA (1993).pdf">
-Alder 
+Quaternionic Quantum Mechanics and Quantum Fields--Adler
 </a></li>
 
 
