--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Lecture
+title:     Field theory lecture
 subtitle:   
 date:       2024-06-08
 author:     Maggie
