--- a/_posts/2024-05-08-Hand.md
+++ b/_posts/2024-05-08-Hand.md
@@ -41,10 +41,17 @@ Unconventioal superconductivity (I)
 p wave superconductor (2)
 </a></li>
 
+
+### Yang lecture 
+
+
 <li>
-<a href="https://maggiexheuw.github.io/pdf2/path integral.pdf">
-path integral 1
+<a href="https://maggiexheuw.github.io/Group/symmetry.pdf">
+Yang mills gauge field  
 </a></li>
+
+
+
 
 
 ### Path integral
@@ -52,6 +59,23 @@ path integral 1
 <li>
 <a href="https://maggiexheuw.github.io/pdf/coherent state.pdf">
 Spin coherent state
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Group/green.pdf">
+MAtsubara Gren function 
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/path integral.pdf">
+path integral 1
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2path2.pdf">
+Fermionic path integral 
 </a></li>
 
 
