--- a/_posts/2024-05-08-Hand.md
+++ b/_posts/2024-05-08-Hand.md
@@ -74,7 +74,7 @@ path integral 1
 
 
 <li>
-<a href="https://maggiexheuw.github.io/pdf2path2.pdf">
+<a href="https://maggiexheuw.github.io/Group/path2.pdf">
 Fermionic path integral 
 </a></li>
 
