--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -52,3 +52,40 @@ Quaternionic Quantum Mechanics and Quantum Fields--Adler
 </a></li>
 
 
+### String theory 
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Group/Polyakov, Gauge fields and strings.pdf">
+Gauge field and string--Polyakov   
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Group/Polyakov, Gauge fields and strings.pdf">
+Gauge field and string--Polyakov   
+</a></li>
+
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Group/polchinski1.pdf">
+String theory$(1)$--Polkinski 
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/Group/String theory Superstring t_ (Z-Library).pdf">
+String theory $(2)$
+</a></li>
+
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Group/An Introduction to Black Ho_ (Z-Library).pdf">
+An introduction to balck holes, information, and the string theory revolution
+</a></li>
+
+
+
+
+
