--- a/_posts/2024-05-08-Hand.md
+++ b/_posts/2024-05-08-Hand.md
@@ -50,6 +50,13 @@ p wave superconductor (2)
 Yang mills gauge field  
 </a></li>
 
+####
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Group/topological.pdf">
+Topological term
+</a></li>
 
 
 
@@ -90,4 +97,9 @@ Clifford Algebra (I)
 </a></li>
 
 
+### Group theory
 
+<li>
+<a href="https://maggiexheuw.github.io/Group/crystal.pdf">
+Crystal field splitting
+</a></li>
