--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -89,3 +89,20 @@ An introduction to balck holes, information, and the string theory revolution
 
 
 
+### Conformal field theory
+
+
+<li>
+<a href="https://conf.itp.phys.ethz.ch/esi-school/lecture-notes.html">
+Conformal field theory lecture
+</a></li>
+
+
+
+## Mathematical physics
+
+
+<li>
+<a href="https://users.ox.ac.uk/~quee4127/">
+Håvard Damm-Johnsen--Galois theory
+</a></li>
